--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="background">
         <video loop autoplay muted>
-            <source src="5x0 - FLAMENGO ATROPELA O GRÊMIO NA LIBERTA ｜ Paródia Gangnam Style - Psy.mp4" type="video/mp4">
+            <source src="https://youtu.be/zQYeIKKnMiM" type="video/mp4">
         </video>
     </div>
     <main>
